[gd_scene load_steps=13 format=2]

[ext_resource path="res://challenges/week2/gfx/meteor/meteorito.png" type="Texture" id=1]
[ext_resource path="res://challenges/week2/scenes/meteor/meteor.gd" type="Script" id=2]
[ext_resource path="res://challenges/week2/sfx/spaceship/spaceship/explosion.wav" type="AudioStream" id=3]
[ext_resource path="res://challenges/week2/gfx/meteor/meteorito_explosion4.png" type="Texture" id=4]
[ext_resource path="res://challenges/week2/gfx/meteor/meteorito_explosion3.png" type="Texture" id=5]
[ext_resource path="res://challenges/week2/gfx/meteor/meteorito_explosion7.png" type="Texture" id=6]
[ext_resource path="res://challenges/week2/gfx/meteor/meteorito_explosion6.png" type="Texture" id=7]
[ext_resource path="res://challenges/week2/gfx/meteor/meteorito_explosion5.png" type="Texture" id=8]
[ext_resource path="res://challenges/week2/gfx/meteor/meteorito_explosion2.png" type="Texture" id=9]
[ext_resource path="res://challenges/week2/gfx/meteor/meteorito_explosion1.png" type="Texture" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 110.653

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": false,
"name": "explosion",
"speed": 10.0
} ]

[node name="meteor" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
input_pickable = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="MeteoriteAnimation" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_meteor_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_meteor_body_entered"]
[connection signal="finished" from="explosion" to="." method="_on_explosion_finished"]
[connection signal="animation_finished" from="MeteoriteAnimation" to="." method="_on_MeteoriteAnimation_animation_finished"]
